# self-obf-interp

./: .gitignore  README.md  data_utils.py  experiment.py  main.py  models.py  probe_experiments_notebook.py  probes.py  pyproject.toml  readme.md  requirements.txt  utils.py  visualization.py
archive/: probe_testing_toolkit.py
conditional_experiment/: conditional_testing.py  conditional_training.py  conditional_utils.py
data/: gemma_chat_template_message_tokens.jinja
notebook_results/: results_nll.json
obf_reps/: config.py  plotting.py  utils.py
obf_reps/data/: __init__.py
obf_reps/logging/: __init__.py
obf_reps/metrics/: __init__.py  probes.py
obf_reps/models/: __init__.py  gemma2.py  hf.py  llama3.py  llamaLAT.py  llamaRR.py
obf_reps/optimize/: flrt_utils.py  gcg_utils.py  loss.py  optimizer_utils.py  optimizers.py
old_code/: experiment.py  main.py  probe_experiments_notebook.py  probe_testing_toolkit.py  setup.py  utils.py
