[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "bitsandbytes>=0.45.3",
    "black[jupyter,notebook]>=25.1.0",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.3.0",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "nnterp>=0.4.5",
    "pip>=25.0.1",
    "sae-lens>=5.6.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sparsify",
    "strong-reject",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
sparsify = { git = "https://github.com/EleutherAI/sparsify" }
strong-reject = { git = "https://github.com/dsbowen/strong_reject.git", rev = "main" }
